--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/setup-python@v5
       - name: Install dependencies
         run: |
-          pip install sphinx sphinx_rtd_theme myst_parser sphinxcontrib-bibtex
+          pip install sphinx sphinx_rtd_theme myst_parser sphinxcontrib-bibtex sphinx-gallery
 
       - name: Sphinx build
         run: |
