--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -14,6 +14,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install sphinx sphinx_rtd_theme myst_parser sphinxcontrib-bibtex sphinx-gallery matplotlib
+      - name: Install package
         run: pip install .
       - name: Sphinx build
         run: |
