--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -9,14 +9,10 @@ jobs:
   docs:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        
-      - name: Install python
-        - uses: actions/setup-python@v5
-          with:
-            python-version: 3.11
-
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with: 
+          python-version: 3.12
       - name: Install dependencies
         run: |
           pip install sphinx sphinx_rtd_theme myst_parser sphinxcontrib-bibtex sphinx-gallery matplotlib
