--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,6 @@ authors = [
 ]
 maintainers = [
   {name = "Nicolas Béreux", email = "nicolas.bereux@gmail.com"},
-  {name = "Lorenzo Rosset"},
 ]
 description = "Training and analyzing Restricted Boltzmann Machines in PyTorch"
 readme = "README.md"
@@ -32,7 +31,7 @@ dependencies = [
 
 classifiers = [
     "Programming Language :: Python :: 3",
-    "License :: OSI Approved :: Apache Software License",
+    "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
 keywords = ["rbm", "Restricted Boltzmann Machine"]
