--- a/.github/workflows/codecov.yaml
+++ b/.github/workflows/codecov.yaml
@@ -1,11 +1,9 @@
 name: Run tests and upload coverage
 
-on:
-  push
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   test:
-    if: github.ref == 'refs/heads/main'
     name: Run tests on latest python version and collect coverage
     runs-on: ubuntu-latest
     steps:
@@ -26,16 +24,13 @@ jobs:
         run: pip install -e .
 
       - name: Get data for binary use case
-        run:
-          wget https://github.com/nbereux/data_test/raw/refs/heads/main/dummy.zip
+        run: wget https://github.com/nbereux/data_test/raw/refs/heads/main/dummy.zip
 
       - name: Get data for potts use case
-        run:
-          wget https://github.com/nbereux/data_test/raw/refs/heads/main/dummy.fasta
+        run: wget https://github.com/nbereux/data_test/raw/refs/heads/main/dummy.fasta
 
       - name: Extract binary data
-        run:
-          unzip ./dummy.zip
+        run: unzip ./dummy.zip
 
       - name: Run tests
         run: PYTORCH_JIT=0 pytest --cov=rbms tests/
